--- a/style.css
+++ b/style.css
@@ -11,3 +11,44 @@
  Tags:         light, dark, two-columns, right-sidebar, responsive-layout, accessibility-ready
  Text Domain:  twentyfourteen-child
  */
+
+/** job details layout 1 **/
+.vacancy-layout-1 #eclipse_vacancy{
+}
+
+.vacancy-layout-1 #eclipse_vacancy .vacancy-meta{
+
+}
+
+.vacancy-layout-1 #eclipse_vacancy .vacancy-meta .vac-lbl{
+}
+
+.vacancy-layout-1 #eclipse_vacancy .vacancy-meta .vac-val{
+}
+	
+.vacancy-layout-1 #eclipse_vacancy .vacancy-action{
+}
+/** job details layout 1 **/
+	
+	
+/** job board layout 1 **/
+#eclipse_job_board .vacancy-layout-1 .vacancy-meta{
+
+}
+
+#eclipse_job_board .vacancy-layout-1 .vacancy-meta .vac-lbl{
+
+}
+
+#eclipse_job_board .vacancy-layout-1  .vacancy-meta .vac-val{
+
+}
+
+#eclipse_job_board .vacancy-layout-1 .vacancy-action{
+
+}
+
+#eclipse_job_board .vacancy-layout-1 .vacancy-description {
+
+}
+/** job board layout 1 **/
