--- a/style.css
+++ b/style.css
@@ -13,57 +13,55 @@
  */
 
 /** job details layout 1 **/
-.vacancy-layout-1 #eclipse_vacancy{
+.vacancy-layout-1 #eclipse_vacancy {
 }
 
-.vacancy-layout-1 #eclipse_vacancy .vacancy-meta{
+.vacancy-layout-1 #eclipse_vacancy .vacancy-meta {
 
 }
 
-.vacancy-layout-1 #eclipse_vacancy .vacancy-meta .vac-lbl{
+.vacancy-layout-1 #eclipse_vacancy .vacancy-meta .vac-lbl {
 }
 
-.vacancy-layout-1 #eclipse_vacancy .vacancy-meta .vac-val{
+.vacancy-layout-1 #eclipse_vacancy .vacancy-meta .vac-val {
 }
-	
-.vacancy-layout-1 #eclipse_vacancy .vacancy-action{
+
+.vacancy-layout-1 #eclipse_vacancy .vacancy-action {
 }
 /** job details layout 1 **/
-	
-	
+
 /** job details layout 2 **/
-.vacancy-layout-2 #eclipse_vacancy{
+.vacancy-layout-2 #eclipse_vacancy {
 }
 
-.vacancy-layout-2 #eclipse_vacancy .vacancy-meta{
+.vacancy-layout-2 #eclipse_vacancy .vacancy-meta {
 
 }
 
-.vacancy-layout-2 #eclipse_vacancy .vacancy-meta .vac-lbl{
+.vacancy-layout-2 #eclipse_vacancy .vacancy-meta .vac-lbl {
 }
 
-.vacancy-layout-2 #eclipse_vacancy .vacancy-meta .vac-val{
+.vacancy-layout-2 #eclipse_vacancy .vacancy-meta .vac-val {
 }
-	
-.vacancy-layout-2 #eclipse_vacancy .vacancy-action{
+
+.vacancy-layout-2 #eclipse_vacancy .vacancy-action {
 }
-/** job details layout 2 **/	
-	
-	
+/** job details layout 2 **/
+
 /** job board layout 1 **/
-#eclipse_job_board .vacancy-layout-1 .vacancy-meta{
+#eclipse_job_board .vacancy-layout-1 .vacancy-meta {
 
 }
 
-#eclipse_job_board .vacancy-layout-1 .vacancy-meta .vac-lbl{
+#eclipse_job_board .vacancy-layout-1 .vacancy-meta .vac-lbl {
 
 }
 
-#eclipse_job_board .vacancy-layout-1  .vacancy-meta .vac-val{
+#eclipse_job_board .vacancy-layout-1  .vacancy-meta .vac-val {
 
 }
 
-#eclipse_job_board .vacancy-layout-1 .vacancy-action{
+#eclipse_job_board .vacancy-layout-1 .vacancy-action {
 
 }
 
@@ -71,37 +69,67 @@
 
 }
 /** job board layout 1 **/
-	
-	
+
 /** job board layout 2 **/
-#eclipse_job_board .vacancy-layout-2 .vacancy-meta{
+#eclipse_job_board .vacancy-layout-2 .vacancy-meta {
 	border: 1px dashed #fff !important;
-    width: 100% !important;
+	width: 100% !important;
 }
 
-#eclipse_job_board .vacancy-layout-2 .vacancy-meta .vac-lbl{
-	width:50%;
+#eclipse_job_board .vacancy-layout-2 .vacancy-meta .vac-lbl {
+	width: 50%;
 }
 
-#eclipse_job_board .vacancy-layout-2 .vacancy-meta .vac-val{
-    min-width: 0 !important;
-    width: 50% !important;
+#eclipse_job_board .vacancy-layout-2 .vacancy-meta .vac-val {
+	min-width: 0 !important;
+	width: 50% !important;
 }
 
-#eclipse_job_board .vacancy-layout-2 .vacancy-action{
-    float: left !important;
-    width: 100% !important;
+#eclipse_job_board .vacancy-layout-2 .vacancy-action {
+	float: left !important;
+	width: 100% !important;
 }
 
 #eclipse_job_board .vacancy-layout-2 .vacancy-action .action-buttons a {
-    width: 100px !important;	
+	width: 100px !important;
 }
 
 #eclipse_job_board .vacancy-layout-2 .vacancy-action .action-buttons .button-apply {
-	
+
 }
 
 #eclipse_job_board .vacancy-layout-2 .vacancy-description {
 
 }
-/** job board layout 1 **/
+/** job board layout 2 **/
+
+/** job board layout 3 **/
+#eclipse_job_board .vacancy-layout-3 .vacancy-meta {
+
+	width: 100% !important;
+}
+
+#eclipse_job_board .vacancy-layout-3 .vacancy-meta .vac-lbl {
+}
+
+#eclipse_job_board .vacancy-layout-3 .vacancy-meta .vac-val {
+
+}
+
+#eclipse_job_board .vacancy-layout-3 .vacancy-action {
+
+	float: left !important;
+	width: 100% !important;
+}
+
+#eclipse_job_board .vacancy-layout-3 .vacancy-action .action-buttons a {
+}
+
+#eclipse_job_board .vacancy-layout-3 .vacancy-action .action-buttons .button-apply {
+
+}
+
+#eclipse_job_board .vacancy-layout-3 .vacancy-description {
+
+}
+/** job board layout 3 **/
